@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: include-value,v 1.3 2004/04/11 17:56:47 karl Exp $
+# $Id: include-value,v 1.4 2005/04/05 21:04:16 karl Exp $
 # Test @value expansion in @include and @verbatiminclude names.
 
 unset TEXINFO_OUTPUT
@@ -11,10 +11,10 @@ exit_status=$?
 if test $exit_status = 0; then
   # should have three instances of _included_,
   # and three of {included}.
-  count=`grep _included_ include-value.info | wc -l`
+  count=`grep -c _included_ include-value.info`
   test $count = 3 || exit_status=`expr $exit_status + 1`
 
-  count=`grep '{included}' include-value.info | wc -l`
+  count=`grep -c '{included}' include-value.info`
   test $count = 3 || exit_status=`expr $exit_status + 1`
 fi
 
